--- a/expense.css
+++ b/expense.css
@@ -18,3 +18,12 @@ button {
     overflow: hidden;
     transition: background-color 0.3s ease-in-out;
 }
+
+
+@media (max-width: 768px) {
+    body {
+        max-width: 800px;
+        margin: 0 auto;
+        width: 100%;
+      }
+  }
